--- a/《JavaScript基础教程》（第8版）/第6章 表单处理/css/script06.css
+++ b/《JavaScript基础教程》（第8版）/第6章 表单处理/css/script06.css
@@ -12,3 +12,19 @@ label.invalid {
     color: #F00;
     font-weight: bold;
 }
+
+select {
+    margin-left: 80px;
+}
+
+input {
+    margin-left: 30px;
+}
+
+input+select,input+input {
+    margin-left: 20px;
+}
+
+.centered {
+    text-align: center;
+}
