--- a/less/混合.less
+++ b/less/混合.less
@@ -27,3 +27,36 @@
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
 }
+
+/*
+在LESS中我们可以定义一些通用的属性集为一个class,然后在另一个class中去调用这些属性.
+下面有这样一个class:
+*/
+.bordered {
+    border-top: dotted 1px black;
+    border-bottom: solid 2px black;
+}
+
+// 那如果我们现在需要在其他class中引入那些通用的属性集,那么我们只需在任何class中像下面这样调用就可以了
+#menu a {
+    color: #111;
+    .bordered;
+}
+
+.post a {
+    color: red;
+    .bordered;
+}
+
+// .bordered class里面的属性样式都会在 #menu a 和 .post a 中体现出来:
+#menu a {
+    color: #111;
+    border-top: dotted 1px black;
+    border-bottom: solid 2px black;
+}
+
+.post a {
+    color: red;
+    border-top: dotted 1px black;
+    border-bottom: solid 2px black;
+}
